--- a/Modacity/Modacity/ViewController/Welcome/welcome.storyboard
+++ b/Modacity/Modacity/ViewController/Welcome/welcome.storyboard
@@ -122,7 +122,7 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="250" id="Qun-hQ-JKe"/>
                                                             </constraints>
-                                                            <string key="text">Record your practice sessions, track your time spent, and use Modacity's scientific improvement process to achieve positive results, faster.</string>
+                                                            <string key="text">Record your practice lists, track your time spent, and use Modacity's scientific improvement process to achieve positive results, faster.</string>
                                                             <fontDescription key="fontDescription" name="Lato-Italic" family="Lato" pointSize="14"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
@@ -402,7 +402,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(STAGING VERSION)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gre-1X-wns">
-                                <rect key="frame" x="121" y="47" width="84.5" height="11"/>
+                                <rect key="frame" x="121" y="46.5" width="84.5" height="11"/>
                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="9"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
